--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,9 @@
 
 <body>
     <div id="container">
+        <div id="cabecera">
+            cabecera
+        </div>
         <div id="post">
             <h1>Este es el titulo interesante de post</h1>
             <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con rama</p>
