yes yes despues de hacer merge

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
         <div id="post">
             <h1>Este es el titulo interesante de post</h1>
             <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con rama</p>
-            <p>Los blog son la mejor forma de compartir informaci[on y us ideas. Mucho mas que ir a conferencias o salir
+            <p>Yes Yes,Los blog son la mejor forma de compartir informaci[on y us ideas. Mucho mas que ir a conferencias o salir
                 en youtube. excepto si eres un rokstar. pero estadisticamen no lo eres... por ahora
             </p>
         </div>
