Mezclando desde mater con cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
         <div id="post">
             <h1>Este es el titulo interesante de post</h1>
             <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con rama</p>
+            <p>esta linea no deberia tener error</p>
         </div>
     </div>
 </body>
