Footer modificado por magahrdeveloper

--- a/blogpost.html
+++ b/blogpost.html
@@ -23,7 +23,7 @@
             </p>
         </div>
         <div id="footer">
-            Estte es el footer
+            ESTE ES EL FOOTER DE magahrdeveloper
         </div>
         
     </div>
