--- a/blogpost.html
+++ b/blogpost.html
@@ -23,7 +23,7 @@
             </p>
         </div>
         <div id="footer">
-            ESTE ES EL FOOTER DE magahrdeveloper
+            ESTE ES EL FOOTER DE magahrdeveloper, actualizado por magahr 
         </div>
         
     </div>
